# basic_agentic_rag

./: .gitignore  README.md  index.py  main.py  pyproject.toml  query.py  requirements.txt
db/: init_db.py
my_agent/: agent.py
my_agent/tools/: __init__.py  calculate_metrics.py  export_to_pdf.py  query_sales.py  search_documents.py
